# ThinRouter

./: .gitignore  README.md  thinpad_top.xpr
console/: .gitignore  Makefile  address.h  compile.sh  linker.ld.S  main.c  router.h  startup.S  term.py  translator.py  utility.h
reports/: Nov27.key  dec18-report.key  dec4-report.key  midterm-report.key
router/: .gitignore  CMakeLists.txt  bird.conf  build_router.sh  main.c  run_bird.sh
router.ac.duck/: router.cpp  router.h
router/components/: CMakeLists.txt  checksum.c  checksum.h  forwarding.c  forwarding.h  lookup.c  lookup.cpp  lookup.h  protocol.c  protocol.h
router/hal/src/linux/platform/: standard.h
router/include/: rip_pack.h  routing_table.h
router/utilities/: routing_table.h  utility.h
supervisor/kernel/: Makefile
supervisor/term/: .gitignore
thinpad_top.srcs/constrs_1/new/: thinpad_top.xdc
thinpad_top.srcs/sim_1/: README.md
thinpad_top.srcs/sim_1/cpu/: testbench_console.sv  testbench_self_boot.sv  testbench_thinpad_cpu.sv
thinpad_top.srcs/sim_1/modules/: cpld_model.sv  cpld_model.v  cpld_model_term.sv  data_ram.sv  inst_rom.sv  rgmii_model.sv
thinpad_top.srcs/sim_1/new/: _TESTBENCH_README.md  example_frame.mem  rgmii_model.sv  tb.sv  testbench_arp_table.sv  testbench_eth_frame.sv  testbench_routing_table.sv  testbench_thinpad.sv
thinpad_top.srcs/sim_1/router/: testbench_arp_table.sv  testbench_io_manager.sv  testbench_packer.sv  testbench_packet_processor.sv  testbench_rgmii.sv  testbench_routing_table.sv  unittest_tx_manager.sv  (+1 more)
thinpad_top.srcs/sources_1/: bus_ctrl.sv  thinpad_top.sv
(+228 files in other folders)
